menambahkan fitur delete

--- a/index.html
+++ b/index.html
@@ -75,18 +75,7 @@
 
         <div id="uncompleteBookList">
 
-          <div class="card my-4">
-            <div class="card-body">
-              <h4>Hello World</h4>
-              <p>Author : Jerinx SID</p>
-              <p>Year : 2021</p>
-
-              <div class="action">
-                <button type="button" class="btn btn-success mt-4" id="completeBtn">Selesai dibaca</button>
-                <button type="button" class="btn btn-danger text-white mt-4" id="deleteBtn">Hapus data buku</button>
-              </div>
-            </div>
-          </div>
+          <p class="m-5 text-secondary">-- Data kosong --</p>
 
         </div>
       </section>
@@ -98,18 +87,7 @@
 
         <div id="completeBookList">
 
-          <div class="card my-4">
-            <div class="card-body">
-              <h4>Hello World</h4>
-              <p>Author : Jerinx SID</p>
-              <p>Year : 2021</p>
-
-              <div class="action">
-                <button type="button" class="btn btn-primary mt-4" id="uncompleteBtn">Belum selesai dibaca</button>
-                <button type="button" class="btn btn-danger mt-4" id="deleteBtn">Hapus data buku</button>
-              </div>
-            </div>
-          </div>
+          <p class="m-5 text-secondary">-- Data kosong --</p>
 
         </div>
       </section>
