--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="ansonymous">
-  <link rel="stylesheet" href="style.css">
+
+  <style>
+    header,
+    #submitBtn,
+    button[data-bs-toggle="modal"] {
+      background-image: radial-gradient(circle 610px at 5.2% 51.6%, rgba(5, 8, 114, 1) 0%, rgba(7, 3, 53, 1) 97.5%);
+    }
+
+    .card:hover {
+      box-shadow: 0 0 7px lightskyblue;
+      cursor: pointer;
+    }
+
+    .card-body>p {
+      margin: 0;
+    }
+
+    .hide {
+      display: none;
+    }
+  </style>
+
   <title>Bookshelf Apps || Dicoding Submission</title>
 </head>
 
@@ -16,7 +37,15 @@
   <!-- Bismillahirahmanirrahim.... pasti bisa :D ! -->
 
   <header class="py-3">
-    <h1 class="text-light container">Bookshelf Apps</h1>
+    <div class="container-fluid container-sm d-flex align-items-center justify-content-between flex-wrap gap-3 gap-sm-0"
+      aria-label="container">
+      <h1 class="text-light">Bookshelf Apps</h1>
+
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Cari data buku...." aria-label="Search" id="search_bar">
+        <button class="btn btn-light" id="searchBtn" type="button">Cari</button>
+      </form>
+    </div>
   </header>
 
   <main class="container my-5">
