--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 
   <main class="container my-5">
 
-    <button type="button" class="btn text-white" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+    <button type="button" class="btn text-white" data-bs-toggle="modal" data-bs-target="#modal_input">
       Tambah data buku
     </button>
 
     <!-- input data buku -->
-    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    <div class="modal fade modal-input" id="modal_input" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
       aria-labelledby="staticBackdropLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
