--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn text-white" id="editBtn">Edit</button>
+            <button type="button" class="btn text-white" id="editBtn">Ubah</button>
           </div>
         </div>
       </div>
@@ -161,6 +161,7 @@
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
   </script>
   <script src="js/script.js"></script>
+  <script src="js/sweetalert2.all.js"></script>
 </body>
 
 </html>
