sedikit perubahan pada nama variabel

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </div>
 
     <!-- modal edit -->
-    <div class="modal fade" id="edit-modal" aria-hidden="true">
+    <div class="modal fade" id="edit-modal" data-bs-backdrop="static" data-bs-keyboard="false" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
